--- a/src/main/resources/templates/peoplenumber/pulic/html/resgister.html
+++ b/src/main/resources/templates/peoplenumber/pulic/html/resgister.html
@@ -72,9 +72,8 @@
                                         list="auto"
                                         placeholder="详细地址"
                                         style="margin-top: 5px;width:98%"
-                                        value="null"
                                         class="form-control addr"
-                                        >
+                                >
                                 <datalist id="auto">
                                     <option></option>
                                 </datalist>                            </div>
@@ -119,12 +118,10 @@
 
                             <div class="form-group">
                                 <input  id="special_address1"
-                                        list="auto1"
+                                        list="auto"
+                                        placeholder="详细地址"
                                         style="margin-top: 5px;width:98%"
-                                        value="null"
-                                        class="form-control addr"
-                                        placeholder="详细地址">
-                                <datalist id="auto1">
+                                        class="form-control addr">
                                     <option></option>
                                 </datalist>                            </div>
                         </div>
