--- a/src/main/resources/templates/peoplenumber/pulic/html/P_TodayAccount.html
+++ b/src/main/resources/templates/peoplenumber/pulic/html/P_TodayAccount.html
@@ -17,11 +17,13 @@
     <title>普通主页</title>
     <style>
         .sela{
-            width:70px;
+            width:80px;
+            /*height: 15px;*/
             font-size: 20px;
             text-decoration: white;
             background-color: transparent;
             border: none;
+            /*outline: none;*/
             outline:none;
         }
         .sela:hover{text-decoration: none}
@@ -32,24 +34,36 @@
 <!--//头部-->
 <nav class="box navbar navbar-default navbar-fixed-top">
     <div class="container">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header page-scroll">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
+        <!--        <div class="navbar-header page-scroll">-->
+        <!--            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">-->
+        <!--                <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span>-->
+        <!--            </button>-->
+
+        <!--        </div>-->
+        <!--        <span class="navbar-header page-scroll">-->
+        <a class="navbar-brand page-scroll" id="address1"  style="font-size: 30px;width: 100%">
+            username
+        </a>
+        <!--        <span><a class="ph">退出登录</a></span>-->
+        <div id="dis">
+            <span><a class="ph" href="p_main.html " >主页 </a></span>
+            <span><a class="ph">/</a></span>
+            <span><a class="ph" href="P_TodayAccount.html" style="color: #2086D7">人数统计图</a></span>
+            <span><a class="ph" href="P_Todayliveness.html">排行榜</a></span>
+            <span><a class="ph" href="http://121.199.21.197:63394/Login">退出登录</a></span>
         </div>
-        <span class="navbar-header page-scroll">
-            <a class="navbar-brand page-scroll" id="address1"  style="font-size: 30px">
-                天津职业技术师范大学</a>
+
         </span>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
-<!--                <li class="hidden"> <a href=""></a> </li>-->
-                <li> <a href="http://121.199.21.197:63393/p_main" class="page-scroll" ><b>主页</b></a> </li>
-                <li> <a href="http://121.199.21.197:63393/P_TodayAccount" class="page-scroll" style="border-bottom: 3px #2086D7 solid;color: #2086D7"><b>人数统计图</b></a> </li>
-<!--                <li> <a href="P_Todayliveness.html" class="page-scroll" >活跃度排行榜</a> </li>-->
-                <li> <a class="page-scroll" ></a> </li>
-<!--                <li> <a class="page-scroll"></a> </li>-->
+                <li class="hidden"> <a href=""></a> </li>
+                <li> <a href="p_main.html" class="page-scroll" ><b>主页</b></a> </li>
+                <li> <a href="P_TodayAccount.html" class="page-scroll" style="border-bottom: 3px #2086D7 solid;color: #2086D7"><b>人数统计图</b></a> </li>
+                <li> <a href="P_Todayliveness.html" class="page-scroll" ><b>活跃度排行榜</b></a> </li>
                 <li> <a class="page-scroll">用户名：<span id="user">张三</span></a> </li>
-                <li> <a class="page-scroll" href="http://121.199.21.197:63393/Login">退出当前用户</a> </li>
+                <li> <a class="page-scroll" href="http://121.199.21.197:63394/Login">退出当前用户</a> </li>
             </ul>
         </div>
     </div>
@@ -57,11 +71,11 @@
 <!--//body-->
 <div id="header">
     <div class="container" style="height:100% " >
-        <div style="margin-top: 120px;">
+        <div class="top">
             <div id="change">
-                <span id="aa" style="float:left;color:white;font-size: 20px;margin-left: 11%;margin-bottom: 60px;">当前是：</span>
+                <span id="aa" >当前是：</span>
             </div>
-            <div id="bar" style="width: 100%; height: 450px;margin-top: 25px;"></div>
+            <div id="bar" ></div>
 
             <div style="width: 100%;height: 80px;"></div>
         </div>
