--- a/src/main/resources/templates/html/Background/area.html
+++ b/src/main/resources/templates/html/Background/area.html
@@ -4,8 +4,9 @@
 <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0">
 <title>百度地图API</title>
 <script src="../../static/assets/js/jquery.js"></script>
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css"
-      integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+<link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
+<script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
+<script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=lf4QntWkxxBhsSS8T9jKSRnzGhVptq4v"></script>
 <!-- 如果需要拖拽鼠标进行操作，可引入以下js文件 -->
 <script type="text/javascript" src="http://api.map.baidu.com/library/RectangleZoom/1.2/src/RectangleZoom_min.js"></script>
@@ -21,14 +22,25 @@
         margin-top: 15px;}
   #suggestId{
       margin-right: 60px;}
+  #tbody1,#tbody1 td th tr {
+      border:1px black solid;
+      text-align: center;
+  }
 </style>
 </head>
-<body>
-
+<body >
 <div id="r-result" class="form-inline">请输入中心点:<input class="form-control" type="text" id="suggestId" size="20" value="百度" style="width:150px;" />
     <span>请输入查询点:</span><input  class="form-control" type="text" id="text_" size="20" value="百度" style="width:150px;" />
+    <span id="ou" style="color: red;margin-left: 25px;">请输入中心点及查询地点</span>
 </div>
+<div> </div>
+<sspan>附近概览：</sspan>
+<table class="table table-hover">
+    <tbody id="tbody1">
+    </tbody>
+</table>
 <div id="allmap" style="width: 100%;height: 100%;"></div>
+
 <div id="searchResultPanel" style="border:1px solid #C0C0C0;width:150px;height:auto; display:none;"></div>
 
 </body>
@@ -291,40 +303,40 @@ function on() {
        console.log(bc / ab)
        var k = bc / ab;
        if (k > 0 && k <= 0.2588) {
-           if (lngB > lngA && latB > latA) alert("所搜索地址在当前位置的S区")
-           if (lngB > lngA && latB < latA) alert("所搜索地址在当前位置的F区")
-           if (lngB < lngA && latB > latA) alert("所搜索地址在当前位置的R区")
-           if (lngB < lngA && latB < latA) alert("所搜索地址在当前位置的G区")
+           if (lngB > lngA && latB > latA) $("#ou").text("所搜索地址在当前位置的S区")
+           if (lngB > lngA && latB < latA) $("#ou").text("所搜索地址在当前位置的F区")
+           if (lngB < lngA && latB > latA) $("#ou").text("所搜索地址在当前位置的R区")
+           if (lngB < lngA && latB < latA) $("#ou").text("所搜索地址在当前位置的G区")
        }
        if (k > 0.2588 && k <= 0.5) {
-           if (lngB > lngA && latB > latA) alert("所搜索地址在当前位置的T区")
-           if (lngB > lngA && latB < latA) alert("所搜索地址在当前位置的E区")
-           if (lngB < lngA && latB > latA) alert("所搜索地址在当前位置的Q区")
-           if (lngB < lngA && latB < latA) alert("所搜索地址在当前位置的H区")
+           if (lngB > lngA && latB > latA) $("#ou").text("所搜索地址在当前位置的T区")
+           if (lngB > lngA && latB < latA) $("#ou").text("所搜索地址在当前位置的E区")
+           if (lngB < lngA && latB > latA) $("#ou").text("所搜索地址在当前位置的Q区")
+           if (lngB < lngA && latB < latA) $("#ou").text("所搜索地址在当前位置的H区")
        }
        if (k > 0.5 && k <= 0.7071) {
-           if (lngB > lngA && latB > latA) alert("所搜索地址在当前位置的U区")
-           if (lngB > lngA && latB < latA) alert("所搜索地址在当前位置的D区")
-           if (lngB < lngA && latB > latA) alert("所搜索地址在当前位置的P区")
-           if (lngB < lngA && latB < latA) alert("所搜索地址在当前位置的I区")
+           if (lngB > lngA && latB > latA) $("#ou").text("所搜索地址在当前位置的U区")
+           if (lngB > lngA && latB < latA) $("#ou").text("所搜索地址在当前位置的D区")
+           if (lngB < lngA && latB > latA) $("#ou").text("所搜索地址在当前位置的P区")
+           if (lngB < lngA && latB < latA)$("#ou").text("所搜索地址在当前位置的I区")
        }
        if (k > 0.7071 && k <= 0.8660) {
-           if (lngB > lngA && latB > latA) alert("所搜索地址在当前位置的V区")
-           if (lngB > lngA && latB < latA) alert("所搜索地址在当前位置的C区")
-           if (lngB < lngA && latB > latA) alert("所搜索地址在当前位置的O区")
-           if (lngB < lngA && latB < latA) alert("所搜索地址在当前位置的J区")
+           if (lngB > lngA && latB > latA) $("#ou").text("所搜索地址在当前位置的V区")
+           if (lngB > lngA && latB < latA) $("#ou").text("所搜索地址在当前位置的C区")
+           if (lngB < lngA && latB > latA) $("#ou").text("所搜索地址在当前位置的O区")
+           if (lngB < lngA && latB < latA) $("#ou").text("所搜索地址在当前位置的J区")
        }
        if (k > 0.8660 && k <= 0.9659) {
-           if (lngB > lngA && latB > latA) alert("所搜索地址在当前位置的W区")
-           if (lngB > lngA && latB < latA) alert("所搜索地址在当前位置的B区")
-           if (lngB < lngA && latB > latA) alert("所搜索地址在当前位置的N区")
-           if (lngB < lngA && latB < latA) alert("所搜索地址在当前位置的K区")
+           if (lngB > lngA && latB > latA) $("#ou").text("所搜索地址在当前位置的W区")
+           if (lngB > lngA && latB < latA) $("#ou").text("所搜索地址在当前位置的B区")
+           if (lngB < lngA && latB > latA) $("#ou").text("所搜索地址在当前位置的N区")
+           if (lngB < lngA && latB < latA) $("#ou").text("所搜索地址在当前位置的K区")
        }
        if (k > 0.9659 && k <= 1) {
-           if (lngB > lngA && latB > latA) alert("所搜索地址在当前位置的X区")
-           if (lngB > lngA && latB < latA) alert("所搜索地址在当前位置的A区")
-           if (lngB < lngA && latB > latA) alert("所搜索地址在当前位置的M区")
-           if (lngB < lngA && latB < latA) alert("所搜索地址在当前位置的L区")
+           if (lngB > lngA && latB > latA) $("#ou").text("所搜索地址在当前位置的X区")
+           if (lngB > lngA && latB < latA) $("#ou").text("所搜索地址在当前位置的A区")
+           if (lngB < lngA && latB > latA) $("#ou").text("所搜索地址在当前位置的M区")
+           if (lngB < lngA && latB < latA) $("#ou").text("所搜索地址在当前位置的L区")
        }
 
        function Rad(d) {
@@ -349,7 +361,51 @@ function on() {
        // $("#suggestId").attr("disabled",true);
        document.getElementById('text_').value="";
        document.getElementById("text_").focus();
+       creatTable();
 
    }
 
+</script>
+<script type="text/javascript">
+
+    function creatTable(){
+        $('table tr').eq(0).remove();
+        $('table tr').eq(0).remove();
+        $('table tr').eq(0).remove();
+        $.ajax({
+            url: "http://121.199.21.197:63393/xiGua",
+            // data: '{ "username": "'+username+'", "password": "'+password+'"}',
+            method: 'post',
+            contentType: "application/json",
+            beforeSend: function(request) {
+                request.setRequestHeader("token",window.localStorage.getItem("token") );
+            },
+            success: function (res) {
+
+                console.log(res);
+                for(var j=0;j<3;j++){
+                    var tableData="<tr>"
+                    if(j===0){
+                        tableData+="<td style='border: 1px black solid;width:82px'>"+"序号"+"</td>"
+                    }
+                    else if(j===1)
+                        tableData+="<td style='border: 1px black solid'>"+"地址"+"</td>";
+                    else
+                        tableData+="<td style='border: 1px black solid'>"+"Mac地址"+"</td>"
+                    for(var i=0;i<res.length;i++){
+                        if(j===0){
+                            tableData+="<td style='border: 1px black solid'>"+res[i].id+"</td>"
+                        }
+                        else if(j===1)
+                            tableData+="<td style='border: 1px black solid'>"+res[i].address+"</td>";
+                        else
+                            tableData+="<td style='border: 1px black solid'>"+res[i].mac_address+"</td>"
+
+
+                    }
+                    tableData+="</tr>"
+                    $("#tbody1").append(tableData);
+                }
+            }})
+    }
 </script>
