--- a/src/main/resources/templates/html/login/resgister.html
+++ b/src/main/resources/templates/html/login/resgister.html
@@ -119,10 +119,12 @@
 
                             <div class="form-group">
                                 <input  id="special_address1"
-                                        list="auto1"
+                                        list="auto"
+                                        type="text"
+                                        placeholder="详细地址"
                                         style="margin-top: 5px;width:98%"
-=                                        class="form-control addr"
-                                        placeholder="详细地址">
+                                        class="form-control addr"
+                                >
                                 <datalist id="auto1">
                                     <option></option>
                                 </datalist>                            </div>
